stopped the flickering w/ pics

--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -22,11 +22,10 @@
 .banner_img {
     width: 200px;
     height: 200px;
-    overflow: hidden;
-    object-fit: cover;
-    object-position: center;
     border-radius: 50%;
     cursor: pointer;
+    background-size: cover;
+    background-position: center;
 }
 
 .banner_img:hover {
